@@ -1,61 +1,61 @@
 package test.io;
 
-import java.awt.*;
-
-import java.time.temporal.ValueRange;
-import java.util.*;
-
 import actions.other.SwitchModeAction;
-import edu.uci.ics.jung.algorithms.layout.Layout;
 import graph.graph.*;
 import gui.Values;
 import io.GXLio;
-import javafx.scene.input.ScrollEvent;
 import net.sourceforge.gxl.*;
 import org.apache.log4j.Logger;
 import org.freehep.graphicsbase.util.Assert;
 import org.junit.Before;
 import org.junit.Test;
 import org.xml.sax.SAXException;
+
+import java.awt.*;
 import java.awt.geom.Point2D;
 import java.io.File;
 import java.io.IOException;
+import java.util.*;
 import java.util.List;
 
 
 public class GXLioTest {
 
-    SwitchModeAction sm = new SwitchModeAction(FunctionMode.TEMPLATE);
-
-    private static Logger logger = Logger.getLogger(GXLioTest.class);
-    GraphObjectsFactory factory = new GraphObjectsFactory();
     /**
      * The values to use.
      */
-    private Values values;
+    private Values values = Values.getInstance();
+    private SwitchModeAction sm = new SwitchModeAction(FunctionMode.TEMPLATE);
+    private static Logger logger = Logger.getLogger(GXLioTest.class);
+    private GraphObjectsFactory factory = new GraphObjectsFactory();
     private GXLDocument doc = null;
+    private List<Sphere> spheresList = new ArrayList<>();
+    private List<Vertex> verticesList = new ArrayList<>();
+    private List<Edge> edgesList = new ArrayList<>();
+    private SyndromGraph<Vertex, Edge> graph = new SyndromGraph<>();
+    private Syndrom syndrom = Syndrom.getInstance();
+    private String nameTestGraph = "testGraph.gxl";
+    private String syndromName = "syndrom";
+    private GXLio gxlio = new GXLio();
 
-    private List<Sphere> spheresList = new ArrayList();
-    private List<Vertex> verticesList = new ArrayList();
-    private List<Edge> edgesList = new ArrayList();
-
-    public GXLio prepareSyndrom(boolean pWithTemplate) throws IOException, SAXException {
-        Syndrom syndrom = graph.graph.Syndrom.getInstance();
+    private GXLio prepareSyndrom(boolean pWithTemplate) throws IOException, SAXException {
+        // generate new graph and set as actual graph
         syndrom.generateNew();
-        Syndrom.getInstance().setTemplate(new Template(25, 50, 75, true, true, true));
+        syndrom.setTemplate(new Template(25, 50, 75, true, true, true));
         generateGraphElements();
-        Syndrom.getInstance().getVv().getGraphLayout().setGraph(Syndrom.getInstance().getGraph());
-        GXLio gxlio = new GXLio();
-        gxlio.exportGXL(new File("testGraph.gxl"), pWithTemplate);
-        Syndrom.getInstance().generateNew();
-        doc = new GXLDocument(new File("testGraph.gxl"));
+        syndrom.getVv().getGraphLayout().setGraph(graph);
+        // export graph
+
+        gxlio.exportGXL(new File(nameTestGraph), pWithTemplate);
+        // generate new clean syndrom
+        syndrom.generateNew();
+        doc = new GXLDocument(new File(nameTestGraph));
         return gxlio;
     }
 
-
     private void generateGraphElements() {
-        Values.getInstance().setFontSizeSphere(10);
-        Values.getInstance().setFillPaintSphere(new java.awt.Color(86, 151, 31, 183));
+        values.setFontSizeSphere(10);
+        values.setFillPaintSphere(new java.awt.Color(86, 151, 31, 183));
         Sphere s1 = factory.createSphere(new Point2D.Double(20, 20));
         s1.setLockedAnnotation(true);
         Sphere s2 = factory.createSphere(new Point2D.Double(270, 50));
@@ -64,8 +64,8 @@ public class GXLioTest {
         s2.setLockedAnnotation(true);
         s2.setLockedVertices(true);
         Sphere s3 = factory.createSphere(new Point2D.Double(620, 20));
-        Values.getInstance().setFillPaintSphere(new java.awt.Color(24, 54, 11, 178));
-        Values.getInstance().setFontSizeSphere(24);
+        values.setFillPaintSphere(new java.awt.Color(24, 54, 11, 178));
+        values.setFontSizeSphere(24);
         Sphere s4 = factory.createSphere(new Point2D.Double(200, 310));
         s4.setLockedMaxAmountVertices("17");
         s4.setLockedPosition(true);
@@ -74,10 +74,10 @@ public class GXLioTest {
         s5.setLockedPosition(true);
         s5.setLockedStyle(true);
 
-        Values.getInstance().setFontSizeVertex(12);
-        Values.getInstance().setShapeVertex(VertexShapeType.CIRCLE);
-        Values.getInstance().setFillPaintVertex(new java.awt.Color(88, 88, 219, 220));
-        Values.getInstance().setFontVertex("Roboto");
+        values.setFontSizeVertex(12);
+        values.setShapeVertex(VertexShapeType.CIRCLE);
+        values.setFillPaintVertex(new java.awt.Color(88, 88, 219, 220));
+        values.setFontVertex("Roboto");
         Vertex v1 = factory.createVertex(new Point2D.Double(80, 80));
         v1.setLockedStyle(true);
         Vertex v2 = factory.createVertex(new Point2D.Double(340, 140));
@@ -90,11 +90,11 @@ public class GXLioTest {
         v3.setLockedPosition(true);
         Vertex v4 = factory.createVertex(new Point2D.Double(485, 140));
         v4.setLockedAnnotation(true);
-        Vertex v5 = factory.createVertex(new Point2D.Double(740, 80));;
+        Vertex v5 = factory.createVertex(new Point2D.Double(740, 80));
         v5.setLockedAnnotation(true);
-        Values.getInstance().setShapeVertex(VertexShapeType.RECTANGLE);
-        Values.getInstance().setFillPaintVertex(new java.awt.Color(11, 19, 90, 220));
-        Values.getInstance().setFontSizeVertex(7);
+        values.setShapeVertex(VertexShapeType.RECTANGLE);
+        values.setFillPaintVertex(new java.awt.Color(11, 19, 90, 220));
+        values.setFontSizeVertex(7);
         Vertex v6 = factory.createVertex(new Point2D.Double(220, 360));
         v6.setLockedStyle(true);
         Vertex v7 = factory.createVertex(new Point2D.Double(280, 420));
@@ -109,21 +109,21 @@ public class GXLioTest {
         v8.setLockedPosition(true);
         Vertex v9 = factory.createVertex(new Point2D.Double(620, 360));
 
-        Values.getInstance().setEdgeArrowType(EdgeArrowType.EXTENUATING);
-        Values.getInstance().setStrokeEdge(StrokeType.BASIC);
+        values.setEdgeArrowType(EdgeArrowType.EXTENUATING);
+        values.setStrokeEdge(StrokeType.BASIC);
         Edge e1 = factory.createEdge();
         e1.setLockedEdgeType(true);
         Edge e2 = factory.createEdge();
         e2.setStroke(StrokeType.BASIC_WEIGHT);
         e2.setLockedEdgeType(true);
-        Values.getInstance().setEdgeArrowType(EdgeArrowType.NEUTRAL);
+        values.setEdgeArrowType(EdgeArrowType.NEUTRAL);
         Edge e3 = factory.createEdge();
         e3.setStroke(StrokeType.DOTTED_WEIGHT);
         e3.setLockedStyle(true);
         Edge e4 = factory.createEdge();
         e4.setLockedPosition(true);
         e4.setStroke(StrokeType.DOTTED);
-        Values.getInstance().setEdgeArrowType(EdgeArrowType.REINFORCED);
+        values.setEdgeArrowType(EdgeArrowType.REINFORCED);
         Edge e5 = factory.createEdge();
         Edge e6 = factory.createEdge();
         e6.setStroke(StrokeType.DASHED);
@@ -148,28 +148,24 @@ public class GXLioTest {
         s5.getVertices().add(v8);
         s5.getVertices().add(v9);
 
-        Syndrom.getInstance().getGraph().getSpheres().add(s1);
-        Syndrom.getInstance().getGraph().getSpheres().add(s2);
-        Syndrom.getInstance().getGraph().getSpheres().add(s3);
-        Syndrom.getInstance().getGraph().getSpheres().add(s4);
-        Syndrom.getInstance().getGraph().getSpheres().add(s5);
+        graph.getSpheres().add(s1);
+        graph.getSpheres().add(s2);
+        graph.getSpheres().add(s3);
+        graph.getSpheres().add(s4);
+        graph.getSpheres().add(s5);
 
-        Syndrom.getInstance().getGraph().addEdge(e1, v1, v2);
-        Syndrom.getInstance().getGraph().addEdge(e2, v5, v4);
-        Syndrom.getInstance().getGraph().addEdge(e3, v7, v6);
-        Syndrom.getInstance().getGraph().addEdge(e4, v8, v9);
-        Syndrom.getInstance().getGraph().addEdge(e5, v6, v3);
-        Syndrom.getInstance().getGraph().addEdge(e6, v7, v3);
-        Syndrom.getInstance().getGraph().addEdge(e7, v8, v3);
-        Syndrom.getInstance().getGraph().addEdge(e8, v9, v3);
-        spheresList = Syndrom.getInstance().getGraph().getSpheres();
-        for(Vertex v : Syndrom.getInstance().getGraph().getVertices()){
-            verticesList.add(v);
-        }
+        graph.addEdge(e1, v1, v2);
+        graph.addEdge(e2, v5, v4);
+        graph.addEdge(e3, v7, v6);
+        graph.addEdge(e4, v8, v9);
+        graph.addEdge(e5, v6, v3);
+        graph.addEdge(e6, v7, v3);
+        graph.addEdge(e7, v8, v3);
+        graph.addEdge(e8, v9, v3);
+        spheresList = graph.getSpheres();
+        verticesList.addAll(graph.getVertices());
         verticesList.sort(Comparator.comparingInt(Vertex::getId));
-        for(Edge e : Syndrom.getInstance().getGraph().getEdges()){
-            edgesList.add(e);
-        }
+        edgesList.addAll(graph.getEdges());
         edgesList.sort(Comparator.comparingInt(Edge::getId));
     }
 
@@ -177,28 +173,25 @@ public class GXLioTest {
 
     @Test
     public void testSphereList() throws IOException, SAXException {
-        prepareSyndrom(false).importGXL(new File("testGraph.gxl"), false);
-        Assert.assertEquals(spheresList, Syndrom.getInstance().getGraph().getSpheres());
+        prepareSyndrom(false).importGXL(new File(nameTestGraph), false);
+        SyndromGraph<Vertex, Edge> g = (SyndromGraph<Vertex, Edge>) syndrom.getVv().getGraphLayout().getGraph();
+        Assert.assertEquals(spheresList, g.getSpheres());
     }
 
     @Test
     public void testVertexList() throws IOException, SAXException {
-        prepareSyndrom(false).importGXL(new File("testGraph.gxl"), false);
-        List<Vertex> importedVertices = new ArrayList<>();
-        for(Vertex v : Syndrom.getInstance().getGraph().getVertices()){
-            importedVertices.add(v);
-        }
+        prepareSyndrom(false).importGXL(new File(nameTestGraph), false);
+        SyndromGraph<Vertex, Edge> g = (SyndromGraph<Vertex, Edge>) syndrom.getVv().getGraphLayout().getGraph();
+        List<Vertex> importedVertices = new ArrayList<>(g.getVertices());
         importedVertices.sort(Comparator.comparingInt(Vertex::getId));
         Assert.assertEquals(verticesList, importedVertices);
     }
 
     @Test
     public void testEdgeList() throws IOException, SAXException {
-        prepareSyndrom(false).importGXL(new File("testGraph.gxl"), false);
-        List<Edge> importedEdges = new ArrayList<>();
-        for(Edge e : Syndrom.getInstance().getGraph().getEdges()){
-            importedEdges.add(e);
-        }
+        prepareSyndrom(false).importGXL(new File(nameTestGraph), false);
+        SyndromGraph<Vertex, Edge> g = (SyndromGraph<Vertex, Edge>) syndrom.getVv().getGraphLayout().getGraph();
+        List<Edge> importedEdges = new ArrayList<>(g.getEdges());
         importedEdges.sort(Comparator.comparingInt(Edge::getId));
         Assert.assertEquals(edgesList, importedEdges);
     }
@@ -207,12 +200,11 @@ public class GXLioTest {
 
     @Test
     public void testElementNumberOfSyndromGraph() throws IOException, SAXException {
-        prepareSyndrom(false).importGXL(new File("testGraph.gxl"), false);
-        Assert.assertEquals(8, Syndrom.getInstance().getVv().getGraphLayout().getGraph().getEdgeCount());
-        Assert.assertEquals(8, Syndrom.getInstance().getGraph().getEdgeCount());
-        Assert.assertEquals(9, Syndrom.getInstance().getVv().getGraphLayout().getGraph().getVertexCount());
-        Assert.assertEquals(9, Syndrom.getInstance().getGraph().getVertexCount());
-        Assert.assertEquals(5, Syndrom.getInstance().getGraph().getSpheres().size());
+        prepareSyndrom(false).importGXL(new File(nameTestGraph), false);
+        SyndromGraph<Vertex, Edge> g = (SyndromGraph<Vertex, Edge>) syndrom.getVv().getGraphLayout().getGraph();
+        Assert.assertEquals(8, g.getEdgeCount());
+        Assert.assertEquals(9, g.getVertexCount());
+        Assert.assertEquals(5, g.getSpheres().size());
     }
 
     @Test
@@ -226,20 +218,21 @@ public class GXLioTest {
     public void testElementNumberOfGXLGraph() throws IOException, SAXException {
         prepareSyndrom(false);
         Assert.assertEquals(1, doc.getDocumentElement().getGraphCount());
-        Assert.assertEquals(22, doc.getElement("syndrom").getChildCount());
+        Assert.assertEquals(22, doc.getElement(syndromName).getChildCount());
     }
 
     // <--------------     relations of graph elements    ------------->
 
     @Test
     public void testVerticesInSpheresOfGraph() throws IOException, SAXException {
-        prepareSyndrom(false).importGXL(new File("testGraph.gxl"), false);
-        ArrayList<Sphere> spheres = (ArrayList<Sphere>) Syndrom.getInstance().getGraph().getSpheres();
-        Assert.assertEquals(new ArrayList<Integer>(Arrays.asList(5)), getNodeIDs(spheres.get(0).getVertices()));
-        Assert.assertEquals(new ArrayList<Integer>(Arrays.asList(6, 7, 8)), getNodeIDs(spheres.get(1).getVertices()));
-        Assert.assertEquals(new ArrayList<Integer>(Arrays.asList(9)), getNodeIDs(spheres.get(2).getVertices()));
-        Assert.assertEquals(new ArrayList<Integer>(Arrays.asList(10, 11)), getNodeIDs(spheres.get(3).getVertices()));
-        Assert.assertEquals(new ArrayList<Integer>(Arrays.asList(12, 13)), getNodeIDs(spheres.get(4).getVertices()));
+        prepareSyndrom(false).importGXL(new File(nameTestGraph), false);
+        SyndromGraph<Vertex, Edge> g = (SyndromGraph<Vertex, Edge>) syndrom.getVv().getGraphLayout().getGraph();
+        ArrayList<Sphere> spheres = (ArrayList<Sphere>) g.getSpheres();
+        Assert.assertEquals(new ArrayList<>(Collections.singletonList(5)), getNodeIDs(spheres.get(0).getVertices()));
+        Assert.assertEquals(new ArrayList<>(Arrays.asList(6, 7, 8)), getNodeIDs(spheres.get(1).getVertices()));
+        Assert.assertEquals(new ArrayList<>(Collections.singletonList(9)), getNodeIDs(spheres.get(2).getVertices()));
+        Assert.assertEquals(new ArrayList<>(Arrays.asList(10, 11)), getNodeIDs(spheres.get(3).getVertices()));
+        Assert.assertEquals(new ArrayList<>(Arrays.asList(12, 13)), getNodeIDs(spheres.get(4).getVertices()));
     }
 
     private ArrayList<Integer> getNodeIDs(LinkedList<Vertex> pVertices){
@@ -252,36 +245,37 @@ public class GXLioTest {
 
     @Test
     public void testEdgesConnectingRightVerticesOfGraph() throws IOException, SAXException {
-        prepareSyndrom(false).importGXL(new File("testGraph.gxl"), false);
-        ArrayList<Edge> edges = new ArrayList();
-        for(Edge e : Syndrom.getInstance().getGraph().getEdges()){
-            edges.add(e);
-        }
+        prepareSyndrom(false).importGXL(new File(nameTestGraph), false);
+        SyndromGraph<Vertex, Edge> g = (SyndromGraph<Vertex, Edge>) syndrom.getVv().getGraphLayout().getGraph();
+        ArrayList<Edge> edges = new ArrayList<>(g.getEdges());
         edges.sort(Comparator.comparingInt(Edge::getId));
-        Assert.assertEquals(5, Syndrom.getInstance().getGraph().getEndpoints(edges.get(0)).getFirst().getId());
-        Assert.assertEquals(6, Syndrom.getInstance().getGraph().getEndpoints(edges.get(0)).getSecond().getId());
-        Assert.assertEquals(9, Syndrom.getInstance().getGraph().getEndpoints(edges.get(1)).getFirst().getId());
-        Assert.assertEquals(8, Syndrom.getInstance().getGraph().getEndpoints(edges.get(1)).getSecond().getId());
-        Assert.assertEquals(11, Syndrom.getInstance().getGraph().getEndpoints(edges.get(2)).getFirst().getId());
-        Assert.assertEquals(10, Syndrom.getInstance().getGraph().getEndpoints(edges.get(2)).getSecond().getId());
-        Assert.assertEquals(12, Syndrom.getInstance().getGraph().getEndpoints(edges.get(3)).getFirst().getId());
-        Assert.assertEquals(13, Syndrom.getInstance().getGraph().getEndpoints(edges.get(3)).getSecond().getId());
-        Assert.assertEquals(10, Syndrom.getInstance().getGraph().getEndpoints(edges.get(4)).getFirst().getId());
-        Assert.assertEquals(7, Syndrom.getInstance().getGraph().getEndpoints(edges.get(4)).getSecond().getId());
-        Assert.assertEquals(11, Syndrom.getInstance().getGraph().getEndpoints(edges.get(5)).getFirst().getId());
-        Assert.assertEquals(7, Syndrom.getInstance().getGraph().getEndpoints(edges.get(5)).getSecond().getId());  Assert.assertEquals(5, Syndrom.getInstance().getGraph().getEndpoints(edges.get(0)).getFirst().getId());
-        Assert.assertEquals(12, Syndrom.getInstance().getGraph().getEndpoints(edges.get(6)).getFirst().getId());  Assert.assertEquals(5, Syndrom.getInstance().getGraph().getEndpoints(edges.get(0)).getFirst().getId());
-        Assert.assertEquals(7, Syndrom.getInstance().getGraph().getEndpoints(edges.get(6)).getSecond().getId());
-        Assert.assertEquals(13, Syndrom.getInstance().getGraph().getEndpoints(edges.get(7)).getFirst().getId());
-        Assert.assertEquals(7, Syndrom.getInstance().getGraph().getEndpoints(edges.get(7)).getSecond().getId());
+        Assert.assertEquals(5, g.getEndpoints(edges.get(0)).getFirst().getId());
+        Assert.assertEquals(6, g.getEndpoints(edges.get(0)).getSecond().getId());
+        Assert.assertEquals(9, g.getEndpoints(edges.get(1)).getFirst().getId());
+        Assert.assertEquals(8, g.getEndpoints(edges.get(1)).getSecond().getId());
+        Assert.assertEquals(11, g.getEndpoints(edges.get(2)).getFirst().getId());
+        Assert.assertEquals(10, g.getEndpoints(edges.get(2)).getSecond().getId());
+        Assert.assertEquals(12,g.getEndpoints(edges.get(3)).getFirst().getId());
+        Assert.assertEquals(13, g.getEndpoints(edges.get(3)).getSecond().getId());
+        Assert.assertEquals(10, g.getEndpoints(edges.get(4)).getFirst().getId());
+        Assert.assertEquals(7, g.getEndpoints(edges.get(4)).getSecond().getId());
+        Assert.assertEquals(11, g.getEndpoints(edges.get(5)).getFirst().getId());
+        Assert.assertEquals(7, g.getEndpoints(edges.get(5)).getSecond().getId());
+        Assert.assertEquals(5, g.getEndpoints(edges.get(0)).getFirst().getId());
+        Assert.assertEquals(12, g.getEndpoints(edges.get(6)).getFirst().getId());
+        Assert.assertEquals(5, g.getEndpoints(edges.get(0)).getFirst().getId());
+        Assert.assertEquals(7, g.getEndpoints(edges.get(6)).getSecond().getId());
+        Assert.assertEquals(13, g.getEndpoints(edges.get(7)).getFirst().getId());
+        Assert.assertEquals(7, g.getEndpoints(edges.get(7)).getSecond().getId());
     }
 
     // <-----------    coordinates    --------->
 
     @Test
     public void testSpheresCoordinatesOfGraph() throws IOException, SAXException {
-        prepareSyndrom(false).importGXL(new File("testGraph.gxl"), false);
-        ArrayList<Sphere> spheres = (ArrayList<Sphere>) Syndrom.getInstance().getGraph().getSpheres();
+        prepareSyndrom(false).importGXL(new File(nameTestGraph), false);
+        SyndromGraph<Vertex, Edge> g = (SyndromGraph<Vertex, Edge>) syndrom.getVv().getGraphLayout().getGraph();
+        ArrayList<Sphere> spheres = (ArrayList<Sphere>) g.getSpheres();
         Assert.assertEquals(new Point2D.Double(20, 20), spheres.get(0).getCoordinates());
         Assert.assertEquals(new Point2D.Double(270, 50), spheres.get(1).getCoordinates());
         Assert.assertEquals(new Point2D.Double(620, 20), spheres.get(2).getCoordinates());
@@ -291,11 +285,9 @@ public class GXLioTest {
 
     @Test
     public void testVerticesCoordinatesOfGraph() throws IOException, SAXException {
-        prepareSyndrom(false).importGXL(new File("testGraph.gxl"), false);
-        ArrayList<Vertex> vertices = new ArrayList();
-        for(Vertex v : Syndrom.getInstance().getGraph().getVertices()){
-            vertices.add(v);
-        }
+        prepareSyndrom(false).importGXL(new File(nameTestGraph), false);
+        SyndromGraph<Vertex, Edge> g = (SyndromGraph<Vertex, Edge>) syndrom.getVv().getGraphLayout().getGraph();
+        ArrayList<Vertex> vertices = new ArrayList<>(g.getVertices());
         vertices.sort(Comparator.comparingInt(Vertex::getId));
         Assert.assertEquals(new Point2D.Double(80, 80), vertices.get(0).getCoordinates());
         Assert.assertEquals(new Point2D.Double(340, 140), vertices.get(1).getCoordinates());
@@ -312,8 +304,9 @@ public class GXLioTest {
 
     @Test
     public void testSpheresWidthOfGraph() throws IOException, SAXException {
-        prepareSyndrom(false).importGXL(new File("testGraph.gxl"), false);
-        ArrayList<Sphere> spheres = (ArrayList<Sphere>) Syndrom.getInstance().getGraph().getSpheres();
+        prepareSyndrom(false).importGXL(new File(nameTestGraph), false);
+        SyndromGraph<Vertex, Edge> g = (SyndromGraph<Vertex, Edge>) syndrom.getVv().getGraphLayout().getGraph();
+        ArrayList<Sphere> spheres = (ArrayList<Sphere>) g.getSpheres();
         Assert.assertEquals(200.0, spheres.get(0).getWidth());
         Assert.assertEquals(300.0, spheres.get(1).getWidth());
         Assert.assertEquals(200.0, spheres.get(2).getWidth());
@@ -323,8 +316,9 @@ public class GXLioTest {
 
     @Test
     public void testSpheresHeightOfGraph() throws IOException, SAXException {
-        prepareSyndrom(false).importGXL(new File("testGraph.gxl"), false);
-        ArrayList<Sphere> spheres = (ArrayList<Sphere>) Syndrom.getInstance().getGraph().getSpheres();
+        prepareSyndrom(false).importGXL(new File(nameTestGraph), false);
+        SyndromGraph<Vertex, Edge> g = (SyndromGraph<Vertex, Edge>) syndrom.getVv().getGraphLayout().getGraph();
+        ArrayList<Sphere> spheres = (ArrayList<Sphere>) g.getSpheres();
         Assert.assertEquals(200.0, spheres.get(0).getHeight());
         Assert.assertEquals(250.0, spheres.get(1).getHeight());
         Assert.assertEquals(200.0, spheres.get(2).getHeight());
@@ -334,11 +328,9 @@ public class GXLioTest {
 
     @Test
     public void testVerticesSizeOfGraph() throws IOException, SAXException {
-        prepareSyndrom(false).importGXL(new File("testGraph.gxl"), false);
-        ArrayList<Vertex> vertices = new ArrayList();
-        for(Vertex v : Syndrom.getInstance().getGraph().getVertices()){
-            vertices.add(v);
-        }
+        prepareSyndrom(false).importGXL(new File(nameTestGraph), false);
+        SyndromGraph<Vertex, Edge> g = (SyndromGraph<Vertex, Edge>) syndrom.getVv().getGraphLayout().getGraph();
+        ArrayList<Vertex> vertices = new ArrayList<>(g.getVertices());
         vertices.sort(Comparator.comparingInt(Vertex::getId));
        // vertices.forEach(System.out::println);
         Assert.assertEquals(50, vertices.get(0).getSize());
@@ -356,8 +348,9 @@ public class GXLioTest {
 
     @Test
     public void testSpheresFillColorOfGraph() throws IOException, SAXException {
-        prepareSyndrom(false).importGXL(new File("testGraph.gxl"), false);
-        ArrayList<Sphere> spheres = (ArrayList<Sphere>) Syndrom.getInstance().getGraph().getSpheres();
+        prepareSyndrom(false).importGXL(new File(nameTestGraph), false);
+        SyndromGraph<Vertex, Edge> g = (SyndromGraph<Vertex, Edge>) syndrom.getVv().getGraphLayout().getGraph();
+        ArrayList<Sphere> spheres = (ArrayList<Sphere>) g.getSpheres();
         Assert.assertEquals(new java.awt.Color(86, 151, 31, 183), spheres.get(0).getColor());
         Assert.assertEquals(new java.awt.Color(86, 151, 31, 183), spheres.get(1).getColor());
         Assert.assertEquals(new java.awt.Color(86, 151, 31, 183), spheres.get(2).getColor());
@@ -368,11 +361,9 @@ public class GXLioTest {
 
     @Test
     public void testVerticesFillColorOfGraph() throws IOException, SAXException {
-        prepareSyndrom(false).importGXL(new File("testGraph.gxl"), false);
-        ArrayList<Vertex> vertices = new ArrayList();
-        for(Vertex v : Syndrom.getInstance().getGraph().getVertices()){
-            vertices.add(v);
-        }
+        prepareSyndrom(false).importGXL(new File(nameTestGraph), false);
+        SyndromGraph<Vertex, Edge> g = (SyndromGraph<Vertex, Edge>) syndrom.getVv().getGraphLayout().getGraph();
+        ArrayList<Vertex> vertices = new ArrayList<>(g.getVertices());
         vertices.sort(Comparator.comparingInt(Vertex::getId));
         Assert.assertEquals(new java.awt.Color(88, 88, 219, 220), vertices.get(0).getFillColor());
         Assert.assertEquals(new java.awt.Color(88, 88, 219, 220), vertices.get(1).getFillColor());
@@ -388,11 +379,9 @@ public class GXLioTest {
 
     @Test
     public void testVerticesDrawColorOfGraph() throws IOException, SAXException {
-        prepareSyndrom(false).importGXL(new File("testGraph.gxl"), false);
-        ArrayList<Vertex> vertices = new ArrayList();
-        for(Vertex v : Syndrom.getInstance().getGraph().getVertices()){
-            vertices.add(v);
-        }
+        prepareSyndrom(false).importGXL(new File(nameTestGraph), false);
+        SyndromGraph<Vertex, Edge> g = (SyndromGraph<Vertex, Edge>) syndrom.getVv().getGraphLayout().getGraph();
+        ArrayList<Vertex> vertices = new ArrayList<>(g.getVertices());
         vertices.sort(Comparator.comparingInt(Vertex::getId));
         Assert.assertEquals(Values.getInstance().getDrawPaintVertex(), vertices.get(0).getDrawColor());
         Assert.assertEquals(Values.getInstance().getDrawPaintVertex(), vertices.get(1).getDrawColor());
@@ -407,11 +396,9 @@ public class GXLioTest {
 
     @Test
     public void testEdgesColorOfGraph() throws IOException, SAXException {
-        prepareSyndrom(false).importGXL(new File("testGraph.gxl"), false);
-        ArrayList<Edge> edges = new ArrayList();
-        for(Edge e : Syndrom.getInstance().getGraph().getEdges()){
-            edges.add(e);
-        }
+        prepareSyndrom(false).importGXL(new File(nameTestGraph), false);
+        SyndromGraph<Vertex, Edge> g = (SyndromGraph<Vertex, Edge>) syndrom.getVv().getGraphLayout().getGraph();
+        ArrayList<Edge> edges = new ArrayList<>(g.getEdges());
         edges.sort(Comparator.comparingInt(Edge::getId));
         Assert.assertEquals(Values.getInstance().getEdgePaint(), edges.get(0).getColor());
         Assert.assertEquals(Values.getInstance().getEdgePaint(), edges.get(1).getColor());
@@ -427,8 +414,9 @@ public class GXLioTest {
 
     @Test
     public void testSpheresLockedAnnotationOfGraph() throws IOException, SAXException {
-        prepareSyndrom(true).importGXL(new File("testGraph.gxl"), true);
-        ArrayList<Sphere> spheres = (ArrayList<Sphere>) Syndrom.getInstance().getGraph().getSpheres();
+        prepareSyndrom(true).importGXL(new File(nameTestGraph), true);
+        SyndromGraph<Vertex, Edge> g = (SyndromGraph<Vertex, Edge>) syndrom.getVv().getGraphLayout().getGraph();
+        ArrayList<Sphere> spheres = (ArrayList<Sphere>) g.getSpheres();
         Assert.assertTrue(spheres.get(0).isLockedAnnotation());
         Assert.assertTrue(spheres.get(1).isLockedAnnotation());
         Assert.assertFalse(spheres.get(2).isLockedAnnotation());
@@ -439,8 +427,9 @@ public class GXLioTest {
     @Test
     public void testSpheresLockedVerticesOfGraph() throws IOException, SAXException {
         sm.action();
-        prepareSyndrom(true).importGXL(new File("testGraph.gxl"), true);
-        ArrayList<Sphere> spheres = (ArrayList<Sphere>) Syndrom.getInstance().getGraph().getSpheres();
+        prepareSyndrom(true).importGXL(new File(nameTestGraph), true);
+        SyndromGraph<Vertex, Edge> g = (SyndromGraph<Vertex, Edge>) syndrom.getVv().getGraphLayout().getGraph();
+        ArrayList<Sphere> spheres = (ArrayList<Sphere>) g.getSpheres();
 
         Assert.assertFalse(spheres.get(0).isLockedVertices());
         Assert.assertTrue(spheres.get(1).isLockedVertices());
@@ -451,8 +440,9 @@ public class GXLioTest {
 
     @Test
     public void testSpheresLockedPositionOfGraph() throws IOException, SAXException {
-        prepareSyndrom(true).importGXL(new File("testGraph.gxl"), true);
-        ArrayList<Sphere> spheres = (ArrayList<Sphere>) Syndrom.getInstance().getGraph().getSpheres();
+        prepareSyndrom(true).importGXL(new File(nameTestGraph), true);
+        SyndromGraph<Vertex, Edge> g = (SyndromGraph<Vertex, Edge>) syndrom.getVv().getGraphLayout().getGraph();
+        ArrayList<Sphere> spheres = (ArrayList<Sphere>) g.getSpheres();
         Assert.assertFalse(spheres.get(0).isLockedPosition());
         Assert.assertFalse(spheres.get(1).isLockedPosition());
         Assert.assertFalse(spheres.get(2).isLockedPosition());
@@ -462,8 +452,9 @@ public class GXLioTest {
 
     @Test
     public void testSpheresLockedStyleOfGraph() throws IOException, SAXException {
-        prepareSyndrom(true).importGXL(new File("testGraph.gxl"), true);
-        ArrayList<Sphere> spheres = (ArrayList<Sphere>) Syndrom.getInstance().getGraph().getSpheres();
+        prepareSyndrom(true).importGXL(new File(nameTestGraph), true);
+        SyndromGraph<Vertex, Edge> g = (SyndromGraph<Vertex, Edge>) syndrom.getVv().getGraphLayout().getGraph();
+        ArrayList<Sphere> spheres = (ArrayList<Sphere>) g.getSpheres();
         Assert.assertFalse(spheres.get(0).isLockedStyle());
         Assert.assertFalse(spheres.get(1).isLockedStyle());
         Assert.assertFalse(spheres.get(2).isLockedStyle());
@@ -473,8 +464,9 @@ public class GXLioTest {
 
     @Test
     public void testSpheresLockedMaxAmountVerticesOfGraph() throws IOException, SAXException {
-        prepareSyndrom(true).importGXL(new File("testGraph.gxl"), true);
-        ArrayList<Sphere> spheres = (ArrayList<Sphere>) Syndrom.getInstance().getGraph().getSpheres();
+        prepareSyndrom(true).importGXL(new File(nameTestGraph), true);
+        SyndromGraph<Vertex, Edge> g = (SyndromGraph<Vertex, Edge>) syndrom.getVv().getGraphLayout().getGraph();
+        ArrayList<Sphere> spheres = (ArrayList<Sphere>) g.getSpheres();
         Assert.assertEquals("", spheres.get(0).getLockedMaxAmountVertices());
         Assert.assertEquals("", spheres.get(1).getLockedMaxAmountVertices());
         Assert.assertEquals("", spheres.get(2).getLockedMaxAmountVertices());
@@ -487,11 +479,9 @@ public class GXLioTest {
 
     @Test
     public void testVerticesLockedStyleOfGraph() throws IOException, SAXException {
-        prepareSyndrom(true).importGXL(new File("testGraph.gxl"), true);
-        ArrayList<Vertex> vertices = new ArrayList();
-        for(Vertex v : Syndrom.getInstance().getGraph().getVertices()){
-            vertices.add(v);
-        }
+        prepareSyndrom(true).importGXL(new File(nameTestGraph), true);
+        SyndromGraph<Vertex, Edge> g = (SyndromGraph<Vertex, Edge>) syndrom.getVv().getGraphLayout().getGraph();
+        ArrayList<Vertex> vertices = new ArrayList<>(g.getVertices());
         vertices.sort(Comparator.comparingInt(Vertex::getId));
         Assert.assertTrue(vertices.get(0).isLockedStyle());
         Assert.assertFalse(vertices.get(1).isLockedStyle());
@@ -506,11 +496,9 @@ public class GXLioTest {
 
     @Test
     public void testVerticesLockedAnnotationOfGraph() throws IOException, SAXException {
-        prepareSyndrom(true).importGXL(new File("testGraph.gxl"), true);
-        ArrayList<Vertex> vertices = new ArrayList();
-        for(Vertex v : Syndrom.getInstance().getGraph().getVertices()){
-            vertices.add(v);
-        }
+        prepareSyndrom(true).importGXL(new File(nameTestGraph), true);
+        SyndromGraph<Vertex, Edge> g = (SyndromGraph<Vertex, Edge>) syndrom.getVv().getGraphLayout().getGraph();
+        ArrayList<Vertex> vertices = new ArrayList<>(g.getVertices());
         vertices.sort(Comparator.comparingInt(Vertex::getId));
         Assert.assertFalse(vertices.get(0).isLockedAnnotation());
         Assert.assertFalse(vertices.get(1).isLockedAnnotation());
@@ -525,11 +513,9 @@ public class GXLioTest {
 
     @Test
     public void testVerticesLockedPositionOfGraph() throws IOException, SAXException {
-        prepareSyndrom(true).importGXL(new File("testGraph.gxl"), true);
-        ArrayList<Vertex> vertices = new ArrayList();
-        for(Vertex v : Syndrom.getInstance().getGraph().getVertices()){
-            vertices.add(v);
-        }
+        prepareSyndrom(true).importGXL(new File(nameTestGraph), true);
+        SyndromGraph<Vertex, Edge> g = (SyndromGraph<Vertex, Edge>) syndrom.getVv().getGraphLayout().getGraph();
+        ArrayList<Vertex> vertices = new ArrayList<>(g.getVertices());
         vertices.sort(Comparator.comparingInt(Vertex::getId));
         Assert.assertFalse(vertices.get(0).isLockedPosition());
         Assert.assertFalse(vertices.get(1).isLockedPosition());
@@ -546,11 +532,9 @@ public class GXLioTest {
 
     @Test
     public void testEdgesLockedStyleOfGraph() throws IOException, SAXException {
-        prepareSyndrom(true).importGXL(new File("testGraph.gxl"), true);
-        ArrayList<Edge> edges = new ArrayList();
-        for(Edge e : Syndrom.getInstance().getGraph().getEdges()){
-            edges.add(e);
-        }
+        prepareSyndrom(true).importGXL(new File(nameTestGraph), true);
+        SyndromGraph<Vertex, Edge> g = (SyndromGraph<Vertex, Edge>) syndrom.getVv().getGraphLayout().getGraph();
+        ArrayList<Edge> edges = new ArrayList<>(g.getEdges());
         edges.sort(Comparator.comparingInt(Edge::getId));
         Assert.assertFalse(edges.get(0).isLockedStyle());
         Assert.assertFalse(edges.get(1).isLockedStyle());
@@ -564,11 +548,9 @@ public class GXLioTest {
 
     @Test
     public void testEdgesLockedPositionOfGraph() throws IOException, SAXException {
-        prepareSyndrom(true).importGXL(new File("testGraph.gxl"), true);
-        ArrayList<Edge> edges = new ArrayList();
-        for(Edge e : Syndrom.getInstance().getGraph().getEdges()){
-            edges.add(e);
-        }
+        prepareSyndrom(true).importGXL(new File(nameTestGraph), true);
+        SyndromGraph<Vertex, Edge> g = (SyndromGraph<Vertex, Edge>) syndrom.getVv().getGraphLayout().getGraph();
+        ArrayList<Edge> edges = new ArrayList<>(g.getEdges());
         edges.sort(Comparator.comparingInt(Edge::getId));
         Assert.assertFalse(edges.get(0).isLockedPosition());
         Assert.assertFalse(edges.get(1).isLockedPosition());
@@ -582,11 +564,9 @@ public class GXLioTest {
 
     @Test
     public void testEdgesLockedEdgeTypeOfGraph() throws IOException, SAXException {
-        prepareSyndrom(true).importGXL(new File("testGraph.gxl"), true);
-        ArrayList<Edge> edges = new ArrayList();
-        for(Edge e : Syndrom.getInstance().getGraph().getEdges()){
-            edges.add(e);
-        }
+        prepareSyndrom(true).importGXL(new File(nameTestGraph), true);
+        SyndromGraph<Vertex, Edge> g = (SyndromGraph<Vertex, Edge>) syndrom.getVv().getGraphLayout().getGraph();
+        ArrayList<Edge> edges = new ArrayList<>(g.getEdges());
         edges.sort(Comparator.comparingInt(Edge::getId));
         Assert.assertTrue(edges.get(0).isLockedEdgeType());
         Assert.assertTrue(edges.get(1).isLockedEdgeType());
@@ -603,11 +583,9 @@ public class GXLioTest {
 
     @Test
     public void testEdgesArrowTypeOfGraph() throws IOException, SAXException {
-        prepareSyndrom(false).importGXL(new File("testGraph.gxl"), false);
-        ArrayList<Edge> edges = new ArrayList();
-        for(Edge e : Syndrom.getInstance().getGraph().getEdges()){
-            edges.add(e);
-        }
+        prepareSyndrom(false).importGXL(new File(nameTestGraph), false);
+        SyndromGraph<Vertex, Edge> g = (SyndromGraph<Vertex, Edge>) syndrom.getVv().getGraphLayout().getGraph();
+        ArrayList<Edge> edges = new ArrayList<>(g.getEdges());
         edges.sort(Comparator.comparingInt(Edge::getId));
         Assert.assertEquals(EdgeArrowType.EXTENUATING, edges.get(0).getArrowType());
         Assert.assertEquals(EdgeArrowType.EXTENUATING, edges.get(1).getArrowType());
@@ -621,11 +599,9 @@ public class GXLioTest {
 
     @Test
     public void testEdgesStrokeTypeOfGraph() throws IOException, SAXException {
-        prepareSyndrom(false).importGXL(new File("testGraph.gxl"), false);
-        ArrayList<Edge> edges = new ArrayList();
-        for(Edge e : Syndrom.getInstance().getGraph().getEdges()){
-            edges.add(e);
-        }
+        prepareSyndrom(false).importGXL(new File(nameTestGraph), false);
+        SyndromGraph<Vertex, Edge> g = (SyndromGraph<Vertex, Edge>) syndrom.getVv().getGraphLayout().getGraph();
+        ArrayList<Edge> edges = new ArrayList<>(g.getEdges());
         edges.sort(Comparator.comparingInt(Edge::getId));
         Assert.assertEquals(StrokeType.BASIC, edges.get(0).getStroke());
         Assert.assertEquals(StrokeType.BASIC_WEIGHT, edges.get(1).getStroke());
@@ -641,14 +617,10 @@ public class GXLioTest {
 
 
 
-
-
-
-
     @Before
     public void prepare() {
         doc = new GXLDocument();
-        GXLGraph gxlGraph = new GXLGraph("syndrom");
+        GXLGraph gxlGraph = new GXLGraph(syndromName);
         GXLNode sphere0 = new GXLNode("0");
         java.awt.Color fillPaint = new java.awt.Color(255, 0, 0, 255);
         String paintDescription = getPaintDescription(fillPaint);
@@ -701,7 +673,7 @@ public class GXLioTest {
         logger.info("Ich bin das GXLDokument: " + doc);
         int numberOfGraphs = doc.getDocumentElement().getGraphCount();
         Assert.assertEquals(1, numberOfGraphs);
-        int numberOfElementsInTheGraph = doc.getElement("syndrom").getChildCount();
+        int numberOfElementsInTheGraph = doc.getElement(syndromName).getChildCount();
         Assert.assertEquals(15, numberOfElementsInTheGraph);
     }
 
@@ -712,7 +684,7 @@ public class GXLioTest {
         GXLNode sphere0 = (GXLNode) doc.getElement("0");
         java.awt.Color expectedColor = new Color(255, 0, 0, 255);
         String sphereColorDescription = ((GXLString) sphere0.getAttr("color").getValue()).getValue();
-        String[] colorArray = getNumberArrayFromString(sphereColorDescription);
+        String[] colorArray = gxlio.getNumberArrayFromString(sphereColorDescription);
         java.awt.Color sphereColor = new Color(Integer.parseInt(colorArray[0]), Integer.parseInt(colorArray[1]),
                 Integer.parseInt(colorArray[2]), Integer.parseInt(colorArray[3]));
         logger.info("Beschreibung der erwarteten Farbe: " + getPaintDescription(expectedColor));
@@ -725,7 +697,7 @@ public class GXLioTest {
     public void testCoordinates() {
         GXLNode vertex0 = (GXLNode) doc.getElement("3");
         String coordinatesDescription = ((GXLString) vertex0.getAttr("coordinates").getValue()).getValue();
-        String[] coordinatesArray = getNumberArrayFromString(coordinatesDescription);
+        String[] coordinatesArray = gxlio.getNumberArrayFromString(coordinatesDescription);
         Assert.assertEquals(250.0, Double.parseDouble(coordinatesArray[0]), 0.0);
         Assert.assertEquals(500.0, Double.parseDouble(coordinatesArray[1]), 0.0);
     }
@@ -749,61 +721,8 @@ public class GXLioTest {
      * @param color the color that need to be describted
      * @return the description of the color as a String
      */
-    public String getPaintDescription(Color color) {
+    private String getPaintDescription(Color color) {
         return ("java.awt.Color[r=" + color.getRed() + ",g=" + color.getGreen()
                 + ",b=" + color.getBlue() + ",a=" + color.getAlpha() + "]");
     }
-
-
-    /**
-     * Converts a String that contains an unknown amount of numbers into a String array.
-     * Each entry of the array contains a number as String.
-     * It is not generally clear of wich concrete type this number is.
-     *
-     * @param pWord a word containing an unknown amount of numbers.
-     * @return the numbers as String contained in the String parameter as entries in the array.
-     */
-    public String[] getNumberArrayFromString(String pWord) {
-        String word = pWord;
-        String[] alphabet = {"2D", "a", "b", "c", "d", "e", "f", "g", "h", "i", "j", "k", "l", "m", "n", "o", "p", "q", "r", "s", "t", "u", "v", "w", "x", "y", "z"};
-        for (String s : alphabet) {
-            word = word.replaceAll(s, "");
-            word = word.replaceAll(s.toUpperCase(), "");
-        }
-        int numberOFDots = 0;
-        while (word.charAt(numberOFDots) == '.') {
-            numberOFDots++;
-        }
-        word = word.substring(numberOFDots);
-        word = word.substring(1, word.length() - 1);
-        if (word.contains("=")) {
-            word = word.substring(1);
-            word = word.replaceAll(",", "");
-            return word.split("=");
-        }
-        word = word.trim();
-        return word.split(",");
-    }
-
-/*
-    @Test
-    public void testPrepareTestsWithoutTemplate(){
-        prepareTests();
-        System.out.println("Die Anzahl der Sphären im Graphen beträgt: " + syndrom.getGraph().getSpheres().size());
-        controller.exportGXL();
-
-        System.out.println("Die Anzahl der Sphären im Graphen beträgt: " + syndrom.getGraph().getSpheres().size());
-        controller.importGXL();
-        System.out.println("Die Anzahl der Sphären im Graphen beträgt: " + syndrom.getGraph().getSpheres().size());
-        Assert.assertEquals(1, syndrom.getGraph().getSpheres().size());
-    }
-
-    @Test
-    public void testPrepareTestsWithTemplate(){
-        prepareTests();
-        controller.exportGXLWithTemplate();
-        controller.importGXLWithTemplate();
-    }
-
-    */
 }
